--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,11 @@ uefi = { version = "0.33.0", features = [
 ] }
 qemu_print = "0.1.0"
 thiserror-no-std = "2.0.2"
+goblin = { version = "0.9.2", default-features = false, features = [
+    "elf64",
+    "elf32",
+    "endian_fd",
+] }
 
 # todo: change this to the gihtub repos
 framebuffer = { path = "../graphics-core/framebuffer" }
