feat: add physical memory manager

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ fonts = { path = "../graphics-core/fonts" }
 sync = { path = "../sync" }
 hal = { path = "../hal" }
 bootinfo = { path = "../bootinfo" }
+bitmap-allocator = { path = "../bitmap-allocator" }
