--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,4 +24,4 @@ fonts = { path = "../graphics-core/fonts" }
 sync = { path = "../sync" }
 hal = { path = "../hal" }
 bootinfo = { path = "../bootinfo" }
-bitmap-allocator = { path = "../bitmap-allocator" }
+mem = { path = "../mem" }
