--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,11 @@ goblin = { version = "0.9.2", default-features = false, features = [
 framebuffer = { path = "../graphics-core/framebuffer" }
 fonts = { path = "../graphics-core/fonts" }
 sync = { path = "../sync" }
-hal = { path = "../hal" }
 bootinfo = { path = "../bootinfo" }
 mem = { path = "../mem" }
+hal = { path = "../hal" }
+
+
+[build-dependencies]
+hal = { path = "../hal" }
+
