--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ uefi = { version = "0.33.0", features = [
     "global_allocator",
     "alloc",
 ] }
-qemu_print = "0.1.0"
 thiserror-no-std = "2.0.2"
 goblin = { version = "0.9.2", default-features = false, features = [
     "elf64",
@@ -18,15 +17,10 @@ goblin = { version = "0.9.2", default-features = false, features = [
     "endian_fd",
 ] }
 
-# todo: change this to the gihtub repos
+# todo: change these to the gihtub repos
 framebuffer = { path = "../graphics-core/framebuffer" }
 fonts = { path = "../graphics-core/fonts" }
 sync = { path = "../sync" }
 bootinfo = { path = "../bootinfo" }
 mem = { path = "../mem" }
 hal = { path = "../hal" }
-
-
-[build-dependencies]
-hal = { path = "../hal" }
-
