--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,9 @@ goblin = { version = "0.9.2", default-features = false, features = [
     "endian_fd",
 ] }
 
-# todo: change these to the gihtub repos
-framebuffer = { path = "../graphics-core/framebuffer" }
-fonts = { path = "../graphics-core/fonts" }
-sync = { path = "../sync" }
-bootinfo = { path = "../bootinfo" }
-mem = { path = "../mem" }
-hal = { path = "../hal" }
+framebuffer = { git = "https://github.com/nebulafoundation/graphics-core.git" }
+fonts = { git = "https://github.com/nebulafoundation/graphics-core.git" }
+sync = { git = "https://github.com/nebulafoundation/sync.git" }
+bootinfo = { git = "https://github.com/nebulafoundation/bootinfo.git" }
+mem = { git = "https://github.com/nebulafoundation/mem.git" }
+hal = { git = "https://github.com/nebulafoundation/hal.git" }
