--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,14 @@
-[package]
-name = "uefi-loader"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-[dependencies]
-log = "0.4.22"
-uefi = { version = "0.33.0", features = [
-    "logger",
-    "global_allocator",
-    "alloc",
-] }
-thiserror-no-std = "2.0.2"
-goblin = { version = "0.9.2", default-features = false, features = [
-    "elf64",
-    "elf32",
-    "endian_fd",
-] }
+members = [
+	"uefi-loader",
+	"kernel",
+	"bootinfo",
+	"framebuffer",
+	"fonts",
+	"hal",
+	"mem",
+	"sync"
+]
 
-framebuffer = { git = "https://github.com/nebulafoundation/graphics-core.git" }
-fonts = { git = "https://github.com/nebulafoundation/graphics-core.git" }
-sync = { git = "https://github.com/nebulafoundation/sync.git" }
-bootinfo = { git = "https://github.com/nebulafoundation/bootinfo.git" }
-mem = { git = "https://github.com/nebulafoundation/mem.git" }
-hal = { git = "https://github.com/nebulafoundation/hal.git" }
+resolver = "2"
