feat(kernel-memory): reclaim loader memory

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bootinfo = { path = "../bootinfo" } 
+bootinfo = { path = "../bootinfo" }
+mem = { path = "../mem" }
