--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 bootinfo = { path = "../bootinfo" }
-mem = { path = "../mem", features = ["alloc"]}
+mem = { path = "../mem", features = ["linked-list"]}
 framebuffer = { path = "../framebuffer" }
 hal = { path = "../hal" }
 sync = { path = "../sync" }
