--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,10 @@ resolver = "2"
 name = "nereus-os"
 version = "0.1.0"
 edition = "2021"
+authors = ["Hannah Fluch"]
 
 [dependencies]
+serde_json = "1.0.138"
+thiserror = "2.0.11"
+fatfs = "0.3.6"
+fscommon = "0.1.1"
