--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,5 @@ authors = ["Hannah Fluch"]
 [dependencies]
 serde_json = "1.0.138"
 thiserror = "2.0.11"
-fatfs = "0.3.6"
 fscommon = "0.1.1"
+fatfs = { git = "https://github.com/rafalh/rust-fatfs.git", rev = "c4bb76929eb115f228720631b4110f827b998653"}
