--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ serde_json = "1.0.138"
 thiserror = "2.0.11"
 fscommon = "0.1.1"
 fatfs = { git = "https://github.com/rafalh/rust-fatfs.git", rev = "c4bb76929eb115f228720631b4110f827b998653"}
+clap = { version = "4.5.27", features = ["derive"] }
