refactor: mm, feat(scheduler): extend trait

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -9,6 +9,7 @@ mem = { path = "../mem", features = ["linked-list"]}
 framebuffer = { path = "../framebuffer" }
 hal = { path = "../hal" }
 sync = { path = "../sync" }
+scheduler = { path = "../scheduler" }
 
 bitflags = "2.6.0"
 paste = "1.0.15"
