feat: prepare scheduler interface

--- a/kernel/x86_64-unknown-nereus.json
+++ b/kernel/x86_64-unknown-nereus.json
@@ -29,5 +29,6 @@
   },
   "static-position-independent-executables": true,
   "supported-sanitizers": ["kcfi", "kernel-address"],
-  "target-pointer-width": "64"
+  "target-pointer-width": "64",
+  "rustc-abi": "x86-softfloat"
 }
