--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -13,4 +13,4 @@ scheduler = { path = "../scheduler" }
 
 bitflags = "2.6.0"
 paste = "1.0.15"
-thiserror-no-std = "2.0.2"
+thiserror = { version = "2.0.12", default-features = false }
