--- a/mem/Cargo.toml
+++ b/mem/Cargo.toml
@@ -10,4 +10,4 @@ linked-list = ["alloc"]
 
 [dependencies]
 bitflags = "2.6.0"
-thiserror-no-std = "2.0.2"
+thiserror = { version = "2.0.12", default-features = false }
