--- a/scheduler/Cargo.toml
+++ b/scheduler/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2024"
 [dependencies]
 mem = { path = "../mem" }
 hal = { path = "../hal" }
-thiserror-no-std = "2.0.2"
+thiserror = { version = "2.0.12", default-features = false }
