--- a/uefi-loader/Cargo.toml
+++ b/uefi-loader/Cargo.toml
@@ -5,21 +5,21 @@ edition = "2021"
 
 [dependencies]
 log = "0.4.22"
-uefi = { version = "0.33.0", features = [
+uefi = { version = "0.35.0", features = [
     "logger",
     "global_allocator",
     "alloc",
 ] }
-thiserror-no-std = "2.0.2"
-goblin = { version = "0.9.2", default-features = false, features = [
+# todo: change this to crates.io goblin as soon as https://github.com/m4b/goblin/pull/478 is merged.
+goblin = { git = "https://github.com/hannahfluch/goblin", default-features = false, features = [
     "elf64",
     "elf32",
     "endian_fd",
 ] }
-
 framebuffer = { path = "../framebuffer" }
 fonts = { path = "../fonts" }
 sync = { path = "../sync" }
 bootinfo = { path = "../bootinfo" }
 mem = { path = "../mem" }
 hal = { path = "../hal" }
+thiserror = { version = "2.0.12", default-features = false }
