--- a/kernel/.cargo/config.toml
+++ b/kernel/.cargo/config.toml
@@ -1,5 +1,5 @@
 [unstable]
-build-std = ["core", "compiler_builtins", "alloc"] 
+build-std = ["core", "compiler_builtins", "alloc", "panic_abort"] 
 build-std-features = ["compiler-builtins-mem"]
 
 [build]
