build: switch to nix (#10)
* feat(nix): add kernel package

* feat:(nix) add loader package

* feat(nix): add qemu and flash output

--- a/kernel/x86_64-unknown-nereus.json
+++ b/kernel/x86_64-unknown-nereus.json
@@ -19,16 +19,16 @@
   },
   "panic-strategy": "abort",
   "plt-by-default": false,
-  "position-independent-executables": false,
   "pre-link-args": {
     "ld.lld": ["-T./kernel/linker.ld"]
   },
+  "position-independent-executables": false,
   "relro-level": "full",
   "stack-probes": {
     "kind": "inline"
   },
   "static-position-independent-executables": true,
   "supported-sanitizers": ["kcfi", "kernel-address"],
-  "target-pointer-width": "64",
+  "target-pointer-width": 64,
   "rustc-abi": "x86-softfloat"
 }
